--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/user-event": "^12.3.0",
     "date-and-time": "^0.14.1",
     "moment": "^2.29.1",
     "node-sass": "^4.14.1",
@@ -38,6 +37,7 @@
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2"
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.5.0"
   }
 }
